syntax = "proto3";

package grpc;

option go_package = "proto/grpc;grpc";

service gRPC {
    rpc GetMessage (GetMessageRequest) returns (MessageResponse);
    rpc UpdateMessage (UpdateMessageRequest) returns (MessageResponse);
    rpc DeleteMessage (DeleteMessageRequest) returns (MessageResponse);
    rpc CreateMessage (PostMessageRequest) returns (MessageResponse);
}

// найти сообщение по id - серверу
message GetMessageRequest {
    int64 textID = 1;
}

// Вернуть сообщение - клиенту
message MessageResponse {
    int64 textID = 1;
    string text = 2;
    string status = 3;
}

// Обновить сообщение - серверу
message UpdateMessageRequest {
    int64 textID = 1;
    string text = 2;
}

// Удалить сообщение - серверу
message DeleteMessageRequest {
    int64 textID = 1;
}

// Создать сообщение - серверу
message PostMessageRequest {
    int64 textID = 1;
    int64 userID = 2;
    string text = 3;
    
}